feat: more templating + construction projects page

--- a/themes/occult-eirbot/assets/css/color.css
+++ b/themes/occult-eirbot/assets/css/color.css
@@ -6,7 +6,7 @@
     background-color: #edb63b;
 }
 
-h3, #menu .menu_element a, footer {
+h3, #menu .menu_element p, #menu .menu_element a, footer {
     color: #edb63b;
 }
 
