--- a/themes/occult-eirbot/layouts/page/construction.html
+++ b/themes/occult-eirbot/layouts/page/construction.html
@@ -1,6 +1,8 @@
+{{ define "main" }}
 <div class="alternate">
   <img src="/images/logo.png" alt="logo eirbot">
   <div class="text">
-    <h3> ZONE EN CONSTRUCTION</h3>
+    {{ .Content }}
   </div>
 </div>
+{{ end }}
