--- a/themes/occult-eirbot/layouts/shortcodes/pictp.html
+++ b/themes/occult-eirbot/layouts/shortcodes/pictp.html
@@ -1,7 +1,7 @@
 <div class="about_content">
   {{ $title := default "" (.Get "title") }}
   {{ with default (resources.Get "images/placeholder.png") (resources.Get (.Get "bg-picture")) }}
-  <h3 style='background-image: url("{{ .Permalink }}");'>
+  <h3 style='background-image: url("{{ .RelPermalink }}");'>
     {{ upper $title }}
   </h3>
   {{ end }}
