experimental: slides in index page

--- a/themes/occult-eirbot/layouts/page/construction.html
+++ b/themes/occult-eirbot/layouts/page/construction.html
@@ -1,8 +1,11 @@
 {{ define "main" }}
+<!-- 
 <div class="alternate">
   <img src="/images/logo.png" alt="logo eirbot">
   <div class="text">
     {{ .Content }}
   </div>
 </div>
+-->
+{{ partial "slide" . }}
 {{ end }}
