--- a/themes/occult-eirbot/layouts/partials/slide.html
+++ b/themes/occult-eirbot/layouts/partials/slide.html
@@ -8,19 +8,19 @@
     <!-- Full-width images with number and caption text -->
     <div class="slide-mySlides slide-fade">
       <div class="slide-numbertext">1 / 3</div>
-      <img src="{{ $imgref }}" style="width:100%">
+      <img class="slide-picture" src="{{ $imgref }}" >
       <div class="slide-text">Caption Text</div>
     </div>
 
     <div class="slide-mySlides slide-fade">
       <div class="slide-numbertext">2 / 3</div>
-      <img src="{{ $imgref }}" style="width:100%">
+      <img class="slide-picture" src="{{ $imgref }}">
       <div class="slide-text">Caption Two</div>
     </div>
 
     <div class="slide-mySlides slide-fade">
       <div class="slide-numbertext">3 / 3</div>
-      <img src="{{ $imgref }}" style="width:100%">
+      <img class="slide-picture" src="{{ $imgref }}">
       <div class="slide-text">Caption Three</div>
     </div>
 
