--- a/themes/occult-eirbot/assets/css/contact.css
+++ b/themes/occult-eirbot/assets/css/contact.css
@@ -4,6 +4,7 @@ input, textarea {
 
 h1 {
     margin-top: 0;
+    margin-bottom: 2rem;
     font-weight: 500;
 }
 
@@ -68,12 +69,12 @@ form {
 }
 
 .form-inner {
-    padding: 40px;
+    padding: 9%;
 }
 
 .form-inner input, .form-inner textarea {
     display: block;
-    width: 100%;
+    width: 92%;
     padding: 15px;
     margin-bottom: 10px;
     border: none;
