--- a/themes/occult-eirbot/assets/css/color.css
+++ b/themes/occult-eirbot/assets/css/color.css
@@ -1,4 +1,4 @@
-.about_content p , .alternate.dark .text p, button {
+.about_content p , .alternate.dark .text p, button, .subheader p {
     color: white;
 }
 
