--- a/themes/occult-eirbot/assets/css/alternate.css
+++ b/themes/occult-eirbot/assets/css/alternate.css
@@ -1,66 +1,69 @@
 .subheader {
-    background-image: url("/images/placeholder.png");
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 40em;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+  background-image: url("/images/placeholder.png");
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-size: cover;
+  height: 40em;
+  width: 100%;
+  background-position: center;
 }
 
 .subheader h3 {
-    margin: 15px;
+  margin: 15px;
+  backdrop-filter: blur(5px);
 }
 
 .subheader p {
-    text-align: center;
-    margin-top: 20px;
-    width: 80%;
+  text-align: center;
+  margin-top: 20px;
+  width: 80%;
+  backdrop-filter: blur(5px);
 }
 
 .alternate {
-    display: flex;
-    height: 18em;
-    width: 100%;
-    justify-content: space-around;
-    cursor: pointer;
+  display: flex;
+  height: 18em;
+  width: 100%;
+  justify-content: space-around;
+  cursor: pointer;
 }
 
 .alternate * {
-    transition: 0.4s;
-    justify-content: space-around;
+  transition: 0.4s;
+  justify-content: space-around;
 }
 
 .alternate .text {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    text-align: center;
-    margin: 5% 0px 5% 0px;
-    width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+  margin: 5% 0px 5% 0px;
+  width: 50%;
 }
 
 .alternate img {
-    object-fit: cover;
-    height: 120px;
-    margin: 5% 0px 5% 0px;
+  object-fit: cover;
+  height: 120px;
+  margin: 5% 0px 5% 0px;
 }
 
 .alternate.light {
-    flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 .alternate.partners {
-    /* padding: 4% 0px 4% 0px; */
+  /* padding: 4% 0px 4% 0px; */
 }
 
 .alternate .back-img {
-    height: 100%;
-    width: 40%;
-    background-position:center;
-    background-image: url(/images/placeholder.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+  height: 100%;
+  width: 40%;
+  background-position: center;
+  background-image: url(/images/placeholder.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
