feat: about section + refactor
it is possible to declare an about section type for section index pages
which enable the display as in the "/about" page with automatic indexing
from the child pages and sections and with additional manual indexing
thanks to the pictp shortcodes. Both ways use the same genric partial

fix: the about layout page has been move into the section layouts folder
as it defines section pages and not single ones

TODO: enable the same system for the slide indexing and for the partners
one

--- a/themes/occult-eirbot/layouts/shortcodes/pictp.html
+++ b/themes/occult-eirbot/layouts/shortcodes/pictp.html
@@ -1,10 +1,3 @@
-<div class="about_content">
-  {{ $title := default "" (.Get "title") }}
-  {{ with default (resources.Get "images/placeholder.png") (resources.Get (.Get "bg-picture")) }}
-  <h3 style='background-image: url("{{ .RelPermalink }}");'>
-    {{ upper $title }}
-  </h3>
-  {{ end }}
-  <p>{{ markdownify .Inner }}</p>
-  <div class="separator"></div>
-</div>
+{{ partial "pictureTitleParagraph.html" (
+dict "bgPicture" (.Get "bg-picture") "givenTitle" (.Get "title")
+"givenContent" (partial "rawMdToHTML" (dict "page" .Page "content" .Inner))) }}
