--- a/themes/occult-eirbot/assets/css/about.css
+++ b/themes/occult-eirbot/assets/css/about.css
@@ -1,26 +1,40 @@
 .about_content {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.about_content a {
+  display: flex; /* Makes <a> a block-level element */
+  flex-direction: column;
+  text-decoration: none; /* Removes default link styling */
+  color: inherit; /* Inherit the text color from parent element */
+  width: 100%;
 }
 
 .about_content h3 {
-    padding: 150px;
-    width: 100%;
-    background-image: url("/images/placeholder.png");
-    background-size: contain;
-  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 150px;
+  width: 100%;
+  background-image: url("/images/placeholder.png");
+  background-size: contain;
+  background-size: 100%;
   background-position: center;
+  transition: background-size 0.3s ease-out;
+}
+
+.about_content a:hover h3 {
+  background-size: 120%;
 }
 
 .about_content p {
-    margin: 80px;
+  margin: 80px;
 }
 
 .about_content .separator {
-    width: 100%;
-    height: 8px;
+  width: 100%;
+  height: 8px;
 }
