--- a/themes/occult-eirbot/assets/css/main.css
+++ b/themes/occult-eirbot/assets/css/main.css
@@ -149,7 +149,7 @@ nav.change {
 }
 
 footer {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   text-align: center;
 }
