--- a/themes/occult-eirbot/layouts/home.html
+++ b/themes/occult-eirbot/layouts/home.html
@@ -1,7 +1,20 @@
-{{ define "extend_head" }}
-    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+{{ define "main" }}
+
+{{ partial "picSubheader.html" (dict "givenTitle" .Title "givenContent"
+.Content "bgPicture" (default "" .Params.mainPicture)) }}
+
+{{/* Index the menu pages excepted the home page */}}
+{{ $menuPages := site.Menus.main.ByWeight }}
+{{ range seq (math.Max 0 (sub (len $menuPages) 1)) }}
+  {{ $page := index $menuPages . }}
+  {{ partial "alternateDiv.html" (dict
+  "url" $page.URL
+  "mainPicture" $page.Page.Params.mainPicture
+  "isDark" (cond (eq (mod . 2) 1) 1 0)
+  "contentTitle" $page.Name
+  "contentDescription" $page.Page.Description
+  "altText" (default "" $page.Page.Params.altText)
+  ) }}
 {{ end }}
 
-{{ define "main" }}
-  {{ .Content }}
 {{ end }}
