--- a/themes/occult-eirbot/assets/css/alternate.css
+++ b/themes/occult-eirbot/assets/css/alternate.css
@@ -27,16 +27,23 @@
   height: 18em;
   width: 100%;
   justify-content: space-around;
-  cursor: pointer;
   padding: 0.75% 0px 0.75% 0px;
+}
+
+.alternate a {
+  text-decoration: inherit;
+  color: inherit;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  justify-content: space-around;
 }
 
 .alternate * {
   transition: 0.4s;
-  justify-content: space-around;
 }
 
-.alternate .text {
+.alternate .text, .alternate a .text {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -45,19 +52,36 @@
   width: 50%;
 }
 
-.alternate.light {
+.alternate a div, .alternate div {
+  transform: scale(1);
+}
+
+.alternate a:hover div {
+  transform: scale(1.05);
+}
+
+.alternate.light, .alternate.light a {
   flex-direction: row-reverse;
 }
 
-.alternate .back-img {
+.back-img {
   width: 40%;
+}
+
+.back-img.thumb {
   border: solid;
 }
 
-.alternate .back-img img {
+.back-img img {
   width: 100%;
   height: 100%;
+}
+
+.back-img.thumb img {
   object-fit: cover;
   filter: blur(1.5px);
 }
 
+.back-img.clipart img {
+  object-fit: contain;
+}
