--- a/themes/occult-eirbot/assets/css/main.css
+++ b/themes/occult-eirbot/assets/css/main.css
@@ -23,6 +23,10 @@ header {
     transition: 0.3s;
 }
 
+header > * {
+  margin: 0% 5px 0% 5px;
+}
+
 #header_logo {
     height: 100%;
     position: relative;
