--- a/themes/occult-eirbot/assets/css/alternate.css
+++ b/themes/occult-eirbot/assets/css/alternate.css
@@ -24,9 +24,9 @@
 
 .alternate {
   display: flex;
-  height: 18em;
   width: 100%;
   justify-content: space-around;
+  align-items: center;
   padding: 0.75% 0px 0.75% 0px;
 }
 
@@ -37,6 +37,7 @@
   height: 100%;
   width: 100%;
   justify-content: space-around;
+  align-items: center;
 }
 
 .alternate * {
@@ -66,6 +67,7 @@
 
 .back-img {
   width: 40%;
+  height: 18em;
 }
 
 .back-img.thumb {
