--- a/themes/occult-eirbot/assets/css/about.css
+++ b/themes/occult-eirbot/assets/css/about.css
@@ -1,9 +1,5 @@
 .about_content {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   text-align: center;
 }
 
@@ -14,20 +10,31 @@
   color: inherit; /* Inherit the text color from parent element */
   width: 100%;
 }
-
-.about_content h3 {
-  padding-top: 150px;
-  padding-bottom: 150px;
+.about_content .about-content-container {
+  position: relative;
   width: 100%;
-  background-image: url("/images/placeholder.png");
-  background-size: contain;
-  background-size: 100%;
-  background-position: center;
-  transition: background-size 0.3s ease-out;
+  overflow: hidden;
 }
 
-.about_content a:hover h3 {
-  background-size: 120%;
+.about_content .about-content-container > h3 {
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.about_content .about-content-container > img {
+  transition: transform 0.5s ease-in-out;
+  width: 100%;
+  height: 50vh;
+  object-fit: cover;
+  display: block;
+}
+
+.about_content a:hover img {
+  transform: scale(1.2);
 }
 
 .about_content p {
