--- a/themes/occult-eirbot/assets/css/alternate.css
+++ b/themes/occult-eirbot/assets/css/alternate.css
@@ -1,13 +1,30 @@
 .subheader {
-  background-image: url("/images/placeholder.png");
-  justify-content: center;
+  position: relative;
+  width: 100%;
+}
+
+.subheader .subheader-container:nth-child(1) {
+  width: 100%;
+}
+
+.subheader .subheader-container:nth-child(1) img {
+  width: 100%;
+  object-fit: cover;
+  height: 40em;
+}
+
+.subheader .subheader-container:nth-child(2) {
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  padding: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-size: cover;
-  height: 40em;
-  width: 100%;
-  background-position: center;
+  justify-content: center;
 }
 
 .subheader h3 {
@@ -18,7 +35,6 @@
 .subheader p {
   text-align: center;
   margin-top: 20px;
-  width: 80%;
   backdrop-filter: blur(5px);
 }
 
