fix: blur bg for h3 + footer

--- a/themes/occult-eirbot/layouts/partials/footer.html
+++ b/themes/occult-eirbot/layouts/partials/footer.html
@@ -1,1 +1,1 @@
-<p> Copyright © {{ now.Year }} Association Eirbot. Tous droits reservés.</p>
+<p> Copyright © {{ now.Year }} Association Eirbot. Tous droits réservés.</p>
