--- a/themes/occult-eirbot/assets/css/about.css
+++ b/themes/occult-eirbot/assets/css/about.css
@@ -23,6 +23,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  backdrop-filter: blur(5px);
 }
 
 .about_content .about-content-container > img {
