--- a/frontend/themes/occult-eirbot/layouts/partials/picSubheader.html
+++ b/frontend/themes/occult-eirbot/layouts/partials/picSubheader.html
@@ -2,7 +2,7 @@
 <div class="subheader">
   <div class="subheader-container">
     {{ partial "img" (dict "img" $bgPicLink "altText" "placeholder_alt" "classes" ""
-    "fitX" 1920 "fitY" 1080) }}
+    "fitX" 1920 "fitY" 1080 "fill" false) }}
   </div>
   <div class="subheader-container">
     <h3>{{ upper .givenTitle }}</h3>
