--- a/frontend/themes/occult-eirbot/layouts/partials/img.html
+++ b/frontend/themes/occult-eirbot/layouts/partials/img.html
@@ -1,9 +1,9 @@
 {{/* .img : Image Resource; .altText : string; .classes: string ; .fitX: int;
-    .fitY: int  */}}
+    .fitY: int .fill: boolean */}}
 {{/* Return a img tag with optimised webp encoding and reduced dimensions */}}
 {{ if not (eq .img.MediaType.SubType "svg") }}
 {{/* TODO: create several available sizes for several screen resolutions */}}
-{{ $img := .img.Process (printf "fit %dx%d webp" .fitX .fitY) }}
+{{ $img := .img.Process (printf "%s %dx%d webp" (cond .fill "fill" "fit") .fitX .fitY) }}
 <img src="{{ $img.RelPermalink }}" width="{{ $img.Width }}"
      height="{{ $img.Height }}" alt="{{ .altText }}" class="{{ .classes }}"/>
 {{ else }}
