--- a/frontend/themes/occult-eirbot/layouts/partials/pictureTitleParagraph.html
+++ b/frontend/themes/occult-eirbot/layouts/partials/pictureTitleParagraph.html
@@ -8,7 +8,7 @@
   {{ with $bgPicLink }}
   <div class="about-content-container">
     {{ partial "img" (dict "img" . "altText" "placeholder_alt" "classes" ""
-    "fitX" 1920 "fitY" 1080) }}
+    "fitX" 1920 "fitY" 1080 "fill" false) }}
     <h3>
       {{ upper $title }}
     </h3>
